# clark-utov

./: .gitignore  AGENT-WORKFLOW.md  DEPENDENCIES.md  LICENSE  NOTICE  README.en.md  README.md  RELEASE_NOTES.md  agent-usage-guide.md
engine/: dry_run.py  dry_run_live.py  pyproject.toml
engine/engine/: __init__.py  _rules.py  aarch64_mem.py  advisor.py  authority_projection.py  block_cause.py  blue_team.py  byte_order.py  capabilities.py  capability.py  closure_classification.py  cluster.py  cohort_diff.py  conformance.py  constant_provenance.py  cost.py  cvd_ledger.py  cvd_mount.py  dataflow.py  discipline.py  discipline_wrapper.py  dispatch_coverage.py  doctor.py  driver.py  emitter.py  errors.py  estimate.py  evidence.py  execution_bundle.py  export_stamp.py  final_materialization.py  fold.py  framing_transform.py  hyp_tree.py  import_map.py  invariants.py  length_chain_check.py  libc_boundary.py  llm_client.py  localize.py  (+36 more)
engine/examples/: agent_drive.py  file_mode_full.py
engine/profiles/: base.json  key_extraction.json  vmp_algorithm_extraction.json  weird_target_x.json
engine/tests/: test_agent_mode_delegated_llm.py  test_agent_serve_phase_dispatch.py  test_authority_projection.py  test_block_cause.py  test_block_cause_gap_kind_realignment.py  test_block_cause_wrapper.py  test_budget_axis_plumbing.py  test_byte_order_decode_guard.py  test_capabilities.py  test_capability.py  test_cli_findings_phases.py  test_cli_inspect.py  test_cli_verify_construction.py  test_closure_classification.py  test_cluster_cascade.py  test_cohort_diff.py  test_conformance_relocation_capability.py  test_constant_provenance.py  test_constant_provenance_allocator_noise.py  test_constant_provenance_wrapper.py  test_cvd.py  test_cvd_addendum.py  test_cvd_ledger.py  test_cvd_mount.py  test_cvd_output_stamped_json.py  test_cvd_plus.py  test_cvd_recovery.py  test_cvd_recovery_oneshot.py  test_cvd_recovery_real_trace.py  test_delegated_backend.py  test_dfg_regs_read_fallback.py  test_dispatch_coverage.py  test_driver_api.py  test_emitter.py  (+77 more)
(+150 files in other folders)
